--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "include-media": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "next": "14.2.3",
+    "next-images": "^1.8.5",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "typescript": "^5",
